updating page partial

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -80,7 +80,7 @@
         background: map-get($theme-colors, "dark");
         padding: 5px 0;
         font-size: 0.9rem;
-        border-top: 1px solid map-get($theme-colors, "light");
+        border-top: 1px solid #4c4c4c;
     }
 
     /*----------------------------------------*/
