--- a/src/sass/navigation/_menus.scss
+++ b/src/sass/navigation/_menus.scss
@@ -115,7 +115,7 @@
 .sub-page-nav {
     display:block;
     width: 100%;
-    
+    margin-bottom: 15px;
     ul {
         list-style: none;
         margin: 0;
@@ -150,6 +150,6 @@
 .woocommerce-breadcrumb {
     padding: 10px 35px;
     background: map-get($theme-colors,"light");
-
+    font-size: 0.9rem;
 
 }
