redesign shop page

--- a/src/sass/elements/navigation/_links.scss
+++ b/src/sass/elements/navigation/_links.scss
@@ -1,16 +1,21 @@
 a {
 	color: map-get($theme-colors , "warning");
+	text-decoration: none !important;
+	
 	&:visited {
 		color: map-get($theme-colors , "warning");
 	}
+	
 	&:hover,
 	&:focus,
 	&:active {
-		color: map-get($theme-colors , "warning");
+		color: map-get($theme-colors , "danger");
 	}
+	
 	&:focus {
 		outline: thin dotted;
 	}
+	
 	&:hover,
 	&:active {
 		outline: 0;
