--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -1,75 +1,7 @@
 
 
-.mf-theme {
-    
-    .page-content {
-        min-height: 650px;
-        padding-top: 25px;
-        padding-bottom: 25px;
-        p {
-            line-height: 1.9rem;
-            text-align: justify;
-        }
-
-
-    }
-
-    .entry-title {
-
-        padding-bottom: 15px;
-        font-size: 1.2rem;
-        position: relative;
-        text-align: center;
-        text-transform: uppercase;
-        margin: 25px 0;
-        border-bottom: 1px solid map-get($theme-colors, "light" );
-
-        @include media-breakpoint-up(sm) {
-            font-size: 1.8rem;
-        }
-        
-        &:after {
-            content: '';
-            position: absolute;
-            background: map-get($theme-colors,"danger");
-            bottom: -2px;
-            left:0;
-            right: 0;
-            width: 10%;
-            margin: auto;
-            height: 5px;
-        }
-    }
-
-
-    
-    
-    .content-split-columns {
-        .block-column {
-            border: 1px solid #e4e2e2;
-            background: map-get($theme-colors, "info" );
-        }
-        .sub-title-header {
-            padding: 5px 3px;
-            border-bottom: 1px solid #b3b0b0;
-            color: #fff;
-        }
-
-        .content-body {
-            padding: 5px;
-            color: #fff;
-        }
-    }
-
-    .post-featured-image {
-        width:100%;
-        height: 140px;
-        @include media-breakpoint-up(sm) {
-            height: 340px;
-        }
-    }
-
-}
 
 @import "footer";
 @import "section";
+@import "content";
+@import "wc-product-loop";
