--- a/src/sass/variables-site/_colors.scss
+++ b/src/sass/variables-site/_colors.scss
@@ -1,5 +1,21 @@
 
-$color__background-body: #fff;
+
+$theme-colors: (
+    "danger"        :   #e50000,
+    "warning"       :   #ff9801,
+    "info"          :   #236866,
+    "light"         :   #f5f5f5,
+    "primary"       :   #4f6373,
+    "secondary"     :   #616A6B,
+    "white"         :   #fff,
+    "dark"          :   #262728,
+    "dark-light"    :   #969494,
+    "success"       :   #58D68D,
+    "gray"          :   #dadada  
+);
+
+
+$color__background-body: map-get($theme-colors,  "white" );
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
@@ -20,19 +36,6 @@ $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
 
-$theme-colors: (
-    "danger"        :   #e50000,
-    "warning"       :   #ff9801,
-    "info"          :   #236866,
-    "light"         :   #f5f5f5,
-    "primary"       :   #4f6373,
-    "secondary"     :   #616A6B,
-    "white"         :   #fff,
-    "dark"          :   #262728,
-    "dark-light"    :   #969494,
-    "success"       :   #58D68D,
-    "gray"          :   #dadada  
-);
 
 
 
